Hero section appear on scroll

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
     <section id="hero-section">
         <div id="hero-background"></div>
-        <div class="hero-circle" id="circle1"></div>
-        <div class="hero-circle" id="circle2"></div>
-        <div class="hero-circle" id="circle3"></div>
-        <div class="hero-circle" id="circle4"></div>
-        <div class="hero-circle" id="circle5"></div>
-        <div class="hero-circle" id="circle6"></div>
+        <div class="hero-circle hiddenCircleTop" id="circle1"></div>
+        <div class="hero-circle hiddenCircleBottom" id="circle2"></div>
+        <div class="hero-circle hiddenCircleTop" id="circle3"></div>
+        <div class="hero-circle hiddenCircleTop" id="circle4"></div>
+        <div class="hero-circle hiddenCircleTop" id="circle5"></div>
+        <div class="hero-circle hiddenCircleTop" id="circle6"></div>
         <img src="src/images/Wood_background.jpg" id="hero-background-img">
         <h1 class="hiddenHero">Manage your hotel</h1>
         <p class="hiddenHero">Have the ability to interact with your own hotel or experience it as a guest.</p>
@@ -46,7 +46,7 @@
             <img src="src/images/about_img.jpg" id="about-img" class="hiddenImage">
         </div>
         <div id="download-section">
-            <div id="download-container">
+            <div id="download-container" class="hiddenDownload">
                 <h1 id="download-title">Download program</h1>
                 <div id="requirements">
                     <h1>System Requirements:</h1>
