Papildināts guide section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="main-section">
         <div id="about">
             <h1 id="about-title" class="hiddenAbout">About the program</h1>
-            <p id="about-text" class="hiddenAbout">It's a Hotel Booking System which allows users to manage room reservations, availability, and customer details. Program offers 2 roles: guest and administrator. Each have it's own functions.</p>
+            <p id="about-text" class="hiddenAbout">It's a Hotel Booking System which allows users to manage room reservations, availability, and customer details. Program offers 2 roles: guest and administrator. Each offers it's own functions.</p>
             <img src="src/images/about_img.jpg" id="about-img" class="hiddenImage">
         </div>
         <div id="download-section">
@@ -70,32 +70,26 @@
                         <li class="list-content"><a href="#download-section">Click download button to download zip file with program.</a></li>
                         <li class="list-content">After zip file is downloaded, it should be located in your downloads folder.</li>
                         <li class="list-content">Right click on zip file and press "extract all" button.</li>
-                        <li class="list-content">Rest of the information is stored <a href="https://github.com/23DP1DPale/Hotel_project_DPale/releases/download/readme/README.MD" download="guide">here</a></li>
                     </ul>
                 </div>
                 <div class="list" id="run-program">
                     <h1>Run program</h1>
-                    <h3>With cmd</h3>
                     <ul>
-                        <li>Open cmd prompt by searching cmd in search bar</li>
-                        <li></li>
-                    </ul>
-                    <h3>With VS code</h3>
-                    <ul>
-                        <li>Download VS code if you don't have it</li>
-                        <li>Open it</li>
+                        <li class="list-content">Download VS code if you don't have it</li>
+                        <li class="list-content">Open it and press File on the top left</li>
+                        <li class="list-content">Press "Open folder" and locate, select the folder</li>
+                        <li class="list-content">Select app.java file and press Run button at the top right</li>
+                        <li class="list-content">Rest of the information is stored <a href="https://github.com/23DP1DPale/Hotel_project_DPale/releases/download/readme/README.MD" download="guide">here</a></li>
                     </ul>
                 </div>
-                
             </div>
         </div>
     </section>
-
     <footer>
         <div id="contactUs-container">
             <h1 class="contact-us contact-title">Contact us</h1>
-            <p class="contact-us contact-phone">Phone: XX XXX XXX</p>
-            <p class="contact-us contact-email">E-mail: XXX@gmail.com</p>
+            <p class="contact-us contact-phone">Phone: +371 XX XXX XXX</p>
+            <p class="contact-us contact-email">Email: XXX@gmail.com</p>
         </div>
         <div id="copyright-container">
             <p id="copyright">Copyright &copy 2025 Daniels Palejs</p>
