Papildināts Contact us

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p>2GB RAM minimum;</p>
                     <p>1 GHz or faster processor (32-bit or 64-bit).</p>
                 </div>
-                <a href="https://github.com/23DP1DPale/Hotel_project_DPale/archive/refs/heads/master.zip" download="guide_file" id="download-button">
+                <a href="https://github.com/23DP1DPale/Hotel_project_DPale/releases/download/Project/Hotel_project.zip" download="guide_file" id="download-button">
                     <div id="download-icon-container">
                         <img src="src/images/download-icon.png" id="download-icon">
                     </div>
@@ -88,8 +88,13 @@
     <footer>
         <div id="contactUs-container">
             <h1 class="contact-us contact-title">Contact us</h1>
-            <p class="contact-us contact-phone">Phone: +371 XX XXX XXX</p>
-            <p class="contact-us contact-email">Email: XXX@gmail.com</p>
+            <p class="contact-us contact-phone"><img src="src/images/phone.png" id="phone-img">Phone: +371 XX XXX XXX</p>
+            <p class="contact-us contact-email"><img src="src/images/email.png" id="email-img">Email: XXX@gmail.com</p>
+            <div id="contactImgContainer">
+                <img src="src/images/facebook.png" class="contact-img" id="facebook">
+                <img src="src/images/twitter.png" class="contact-img" id="twitter">
+                <img src="src/images/youtube.png" class="contact-img" id="youtube">
+            </div>
         </div>
         <div id="copyright-container">
             <p id="copyright">Copyright &copy 2025 Daniels Palejs</p>
