Pievienota poga User guide

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div  class="list" id="setup">
                     <h1>Setup program</h1>
                     <ul>
-                        <li class="list-content"><a href="#download-section">Click download button to download zip file with program.</a></li>
+                        <li class="list-content"><a href="#download-section" class="guide-link">Click download button to download zip file with program.</a></li>
                         <li class="list-content">After zip file is downloaded, it should be located in your downloads folder.</li>
                         <li class="list-content">Right click on zip file and press "extract all" button.</li>
                     </ul>
@@ -79,9 +79,11 @@
                         <li class="list-content">Open it and press File on the top left</li>
                         <li class="list-content">Press "Open folder" and locate, select the folder</li>
                         <li class="list-content">Select app.java file and press Run button at the top right</li>
-                        <li class="list-content">Rest of the information is stored <a href="https://github.com/23DP1DPale/Hotel_project_DPale/releases/download/readme/README.MD" download="guide">here</a></li>
                     </ul>
                 </div>
+                <button onclick="location.href='https://github.com/23DP1DPale/Hotel_project_DPale/releases/download/readme/README.MD'" type="button" id="guide-button">
+                    <a>User guide</a>
+                </button>
             </div>
         </div>
     </section>
